# ssfmt

./: .gitignore  Cargo.toml  README.md  TESTING.md  TODO.md
docs/: ARCHITECTURE.md  COMPARISON.md
docs/plans/: 2026-01-09-ssfmt-design.md  2026-01-09-ssfmt-implementation.md
src/: ast.rs  builtin_formats.rs  cache.rs  date_serial.rs  error.rs  hijri.rs  lib.rs  options.rs  value.rs
src/formatter/: bigint.rs  date.rs  fraction.rs  mod.rs  number.rs  text.rs
src/locale/: builtin.rs  mod.rs
src/parser/: lexer.rs  mod.rs  tokens.rs
tests/: ast_tests.rs  builtin_format_id_tests.rs  convenience_tests.rs  date_serial_tests.rs  error_tests.rs  format_dates.rs  format_numbers.rs  general_format_tests.rs  integration.rs  lexer_tests.rs  options_tests.rs  parser_tests.rs  ssf_comma_tests.rs  ssf_dates_tests.rs  ssf_exp_tests.rs  ssf_fraction_tests.rs  ssf_general_tests.rs  ssf_implied_tests.rs  ssf_oddities_tests.rs  ssf_times_tests.rs  ssf_valid_tests.rs  value_tests.rs
tests/fixtures/: ssf_dates_sample.tsv  ssf_times_sample.tsv
